# espsol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docs.md
components/espsol/: CMakeLists.txt  Kconfig
components/espsol/include/: espsol.h  espsol_crypto.h  espsol_mnemonic.h  espsol_rpc.h  espsol_token.h  espsol_tx.h  espsol_types.h  espsol_utils.h  espsol_ws.h
components/espsol/priv_include/: espsol_ed25519.h  espsol_internal.h
components/espsol/src/: espsol.c  espsol_base58.c  espsol_base64.c  espsol_bip39_wordlist.c  espsol_crypto.c  espsol_ed25519.c  espsol_mnemonic.c  espsol_rpc.c  espsol_token.c  espsol_tx.c  espsol_ws.c
examples/basic_rpc/: CMakeLists.txt  README.md
examples/basic_rpc/main/: main.c
examples/mnemonic_wallet/: CMakeLists.txt  README.md
examples/mnemonic_wallet/main/: main.c
examples/quickstart/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/quickstart/main/: CMakeLists.txt  idf_component.yml  quickstart.c
examples/token_operations/: CMakeLists.txt  README.md
examples/token_operations/main/: main.c
examples/transfer_sol/: CMakeLists.txt  README.md
examples/wallet_demo/: CMakeLists.txt  README.md
examples/websocket_sub/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
test/host/: run_tests.sh  test_encoding.c  test_errors.c  test_mnemonic.c  test_token.c  test_tx.c
test/main/: CMakeLists.txt  idf_component.yml  integration_test.c  integration_test.h  main.c
(+19 files in other folders)
